@@ -194,8 +194,8 @@ class Album(DataObject, Item):
             return
 
         if not self._tracks_loaded:
-            artists = set()
             totalalbumtracks = 0
+            va = self._new_metadata['musicbrainz_albumartistid'] == VARIOUS_ARTISTS_ID
 
             djmix_ars = {}
             if hasattr(self._new_metadata, "_djmix_ars"):
@@ -221,7 +221,8 @@ class Album(DataObject, Item):
                     track._customize_metadata()
 
                     self._new_metadata.length += tm.length
-                    artists.add(tm["musicbrainz_artistid"])
+                    if va:
+                        tm["compilation"] = "1"
 
                     # Run track metadata plugins
                     try:
@@ -233,8 +234,6 @@ class Album(DataObject, Item):
 
             for track in self._new_tracks:
                 track.metadata["~totalalbumtracks"] = totalalbumtracks
-                if len(artists) > 1:
-                    track.metadata["compilation"] = "1"
 
             del self._release_node
             self._tracks_loaded = True
